Adding in client photo

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <div id="features-tab2">
                             <div class="row">
                                 <h2 class="section-heading">For Clinics</h2>
-                                <p class="section-subheading ">Start using CAST at your location today.</p>
+                                <p style="font-family:Avenir;" class="section-subheading ">Start using CAST at your location today.</p>
                             </div>
                             <ul>
                                 <li>Save hours of casting per day</li>
@@ -157,14 +157,14 @@
                                 <li>Communicate with central fabrication easier.</li>
                             </ul>
                             <a href="trial.html" class="primary-button button-inverse">Start a Trial Today</a>
-                            <img src="img/mockups/tab2.png" class="fadeRight animated" alt="">
+                            <img style="max-width:75%;" src="img/mockups/clientside.png" class="fadeRight animated" alt="">
                         </div>
                         <!-- END TAB 2 -->
                         <!-- TAB 3 -->
                         <div id="features-tab3">
                             <div class="row">
                                 <h2 class="section-heading">For Vendors</h2>
-                                <p class="section-subheading ">Become a vendor on CAST for seamless communication with customers and a dynamic order management platform.</p>
+                                <p style="font-family:Avenir;" class="section-subheading ">Become a vendor on CAST for seamless communication with customers and a dynamic order management platform.</p>
                             </div>
                             <ul>
                                 <li>Secure and efficient storage of orders</li>
@@ -244,7 +244,7 @@
                     <div class="col-lg-6 text-center">
                         <h2 class="section-heading">Our Design</h2>
                         <span class="separator"></span>
-                        <p style="font-family: Avenir;" class="section-subheading ">The first modular orthotic device. Capable of being manufactured in 1.5 hours in-house, this manufacturing process is revolutionary.</p>
+                        <p style="font-family: Avenir;" class="section-subheading ">Introducing the first modular orthotic device. Capable of being manufactured in 1.5 hours in-house, this manufacturing process is <strong>revolutionary</strong>.</p>
                     </div>
                     <div class="col-lg-6 text-center">
                         <img style="width:50%;" src="img/orthotic_graphic.png">
