modified to more smooth scroll

--- a/trial.html
+++ b/trial.html
@@ -594,7 +594,10 @@
         <script src="js2/jquery.easing.min.js"></script>
         <script src="js2/bootstrap.min.js"></script>
         <!-- smoothscroll  -->
-        <script src="js2/smoothscroll.js"></script>
+        <!-- // <script src="js/smoothscroll.js"></script> -->
+        <!-- SCROLL -->
+        <script src="js/jquery.scrollgress.min.js"></script>
+        <script src="js/jquery.scrolly.min.js"></script>
         <!-- classie  -->
         <script src="js2/classie.js"></script>
         <!-- piechart  -->
