--- a/index.html
+++ b/index.html
@@ -758,7 +758,10 @@
         <script src="js/jquery.easing.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <!-- smoothscroll  -->
-        <script src="js/smoothscroll.js"></script>
+        <!-- // <script src="js/smoothscroll.js"></script> -->
+        <!-- SCROLL -->
+        <script src="js/jquery.scrollgress.min.js"></script>
+        <script src="js/jquery.scrolly.min.js"></script>
         <!-- piechart  -->
         <script src="js/jquery.easytabs.min.js"></script>
         <!-- tabs  -->
