--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                      <div class="header-dashboard"> 
-                        <img src="img/mockups/mobile.png" class="dashboard" alt="">
+                        <img style="margin-right=100px;" src="img/mockups/mobile.png" class="dashboard" alt="">
                     </div>
             </div>
             <div id="particles-js"></div>
@@ -180,7 +180,7 @@
                     <div class="col-lg-6 text-center">
                         <h2 class="section-heading">Our Design</h2>
                         <span class="separator"></span>
-                        <p style="font-family: Avenir;" class="section-subheading ">Introducing the first modular orthotic device. Capable of being manufactured in 1.5 hours in-house, this manufacturing process is <strong>revolutionary</strong>.</p>
+                        <p style="font-family: Avenir;" class="section-subheading ">Introducing the first modular orthotic device. Capable of being manufactured in a fraction of the time in-house, this manufacturing process is <strong>revolutionary</strong>.</p>
 
 
 
@@ -191,7 +191,7 @@
                         <h4 style="color:#00a6c6;font-family:Avenir;font-size:32px;" id="product-description">A completely modular design.</h4>
                         
 
-                        <!-- <div class="bounce"><img src="img/arrow.png"></div> -->
+                        <div class="bounce"><!-- <img src="img/arrow.png"> --><span style="color:#00a6c6;" class="icon featured-1 fa-angle-double-right"></span></div>
 
 
 
@@ -687,11 +687,11 @@
                                 </li>
                             </ul>
                             <ul class="footer-secondary-nav">
-                                <li class="">
+                                <!-- <li class="">
                                     <a class="page-scroll" href="#"><span class="fa fa-phone"></span>+44-12-3456-7890</a>
-                                </li>
+                                </li> -->
                                 <li class="">
-                                    <a class="page-scroll" href="#"><span class="fa fa-envelope"></span>office@keysoft</a>
+                                    <a class="page-scroll" href="mailto=contact@fusiform.co"><span class="fa fa-envelope"></span>contact@fusiform.co</a>
                                 </li>
                                 <li class="">
                                     <a class="page-scroll" href="#"><span class="fa fa-map-marker"></span>Baltimore, Maryland</a>
@@ -737,7 +737,7 @@
                     document.getElementById("product-description").innerHTML = "Remove a piece and refabricate in minutes.";
                 }
                 else if (image.src.match("img/hole_orthotic.png")) {
-                    image.src = "img/mockups/tab1.png";
+                    image.src = "img/view2_woleg.png";
                     document.getElementById("product-description").innerHTML = "Increase the lifespan of the device.";
                 }
                 else {
