changed scroll tabs

--- a/index.html
+++ b/index.html
@@ -674,10 +674,10 @@
                                     <a class="page-scroll" href="#features">CAST</a>
                                 </li>
                                 <li class="">
-                                    <a class="page-scroll" href="#video">Orthotics</a>
+                                    <a class="page-scroll" href="#subscribe">Orthotics</a>
                                 </li>
                                 <li class="">
-                                    <a class="page-scroll" href="#pricing">Pricing</a>
+                                    <a class="page-scroll" href="#solutions">Design</a>
                                 </li>
                                 <li class="active">
                                     <a class="page-scroll" href="#team">Team</a>
