--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                 <div class="row">
                     <h3 style="z-index:1;" >Subscribe to receive important updates.</h3>
                     <form class="subscribe-form">
-                        <input type="email"  placeholder="Your email adress"/>
+                        <input type="email" id="email" placeholder="Your email address"/>
                         <button type="submit">Subscribe</button>
                         <div id="subscribe-success"></div>
                     </form>
