added button to header

--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
                     <h1 class="intro-lead-in">Better orthotics for those that matter.</h1>
                     <span style="font-family: Avenir;" class="intro-heading">7.3 million people will use orthotic devices by 2020.</br>With our technology, long waits and high prices will be a thing of the past. It's time for a change in orthotics.</span>
                     <div class="header-buttons">
-                        <a href="#contact" class="page-scroll primary-button">Talk With Us</a>
+                        <a href="#services" class="page-scroll primary-button">Learn More</a>
+                        <a href="#contact" class="page-scroll secondary-button">Talk with us</a>
                         <!-- <a href="#features" class="primary-button button-inverse page-scroll hidden-xs">Learn More</a> -->
                     </div>
                 </div>
-                     <div class="header-dashboard"> 
-                        <img style="padding-bottom:0px;width:65%;" src="img/view2_exploded_black.png" class="dashboard" alt="">
-                    </div>
+                 <div class="header-dashboard"> 
+                    <img style="padding-bottom:0px;width:65%;" src="img/view2_exploded_black.png" class="dashboard" alt="">
+                </div>
             </div>
             <div id="particles-js"></div>
         </header>
