made with love in baltimore

--- a/index.html
+++ b/index.html
@@ -705,6 +705,8 @@
                     <div class="lower-footer">
                         <div class="pull-left">
                             <span>© Fusiform, Inc. 2015</span>
+                            
+                            <a href="http://madewithloveinbaltimore.org">Made with  <b style="color: red">&hearts; </b>in Baltimore</a>
                             <!-- <a href="#"> Terms of Service </a>
                             <a href="#"> Privacy Policy </a> -->
                         </div>
