update to partners

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <a class="page-scroll" href="#team">Team</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#clients">Clients</a>
+                            <a class="page-scroll" href="#clients">Partners</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="#contact">Contact</a>
@@ -568,7 +568,7 @@
                         <a href="#"><img style="width:100%;" src="img/logos/fusiformFINAL(4.15)clear(normal).png" alt=""></a>
                     </div>
                     <div class="clients-content">
-                        <a href="#"><img style="width:100%;" src="img/logos/fusiformFINAL(4.15)clear(normal).png" alt=""></a>
+                        <a href="#"><img style="width:100%;" src="img/logos/AbellLogo.png" alt=""></a>
                     </div>
                     <div class="clients-content">
                         <a href="#"><img style="width:100%;" src="img/logos/fusiformFINAL(4.15)clear(normal).png" alt=""></a>
@@ -684,7 +684,7 @@
                                     <a class="page-scroll" href="#team">Team</a>
                                 </li>
                                 <li class="">
-                                    <a class="page-scroll" href="#clients">Clients</a>
+                                    <a class="page-scroll" href="#clients">Partners</a>
                                 </li>
                             </ul>
                             <ul class="footer-secondary-nav">
@@ -692,10 +692,10 @@
                                     <a class="page-scroll" href="#"><span class="fa fa-phone"></span>+44-12-3456-7890</a>
                                 </li> -->
                                 <li class="">
-                                    <a class="page-scroll" href="mailto=contact@fusiform.co"><span class="fa fa-envelope"></span>contact@fusiform.co</a>
+                                    <a class="page-scroll" href="mailto:contact@fusiform.co"><span class="fa fa-envelope"></span>contact@fusiform.co</a>
                                 </li>
                                 <li class="">
-                                    <a class="page-scroll" href="#"><span class="fa fa-map-marker"></span>Baltimore, Maryland</a>
+                                    <a class="page-scroll" href="#contact"><span class="fa fa-map-marker"></span>Baltimore, Maryland</a>
                                 </li>
                             </ul>
                         </div>
@@ -706,7 +706,7 @@
                         <div class="pull-left">
                             <span>© Fusiform, Inc. 2015</span>
                             
-                            <a href="http://madewithloveinbaltimore.org">Made with  <b style="color: red">&hearts; </b>in Baltimore</a>
+                            <a href="http://madewithloveinbaltimore.org">Made with <b style="color: red">&hearts; </b>in Baltimore</a>
                             <!-- <a href="#"> Terms of Service </a>
                             <a href="#"> Privacy Policy </a> -->
                         </div>
