--- a/index.html
+++ b/index.html
@@ -603,14 +603,15 @@
             <div class="overlay parallax"></div>
             <div class="container">
                 <div class="row">
-                    <h3 style="z-index:1;" >Subscribe to receive important updates.</h3>
                     <form class="subscribe-form">
+                        <h3 >Subscribe to receive important updates.</h3>
                         <input type="email" id="email" placeholder="Your email address"/>
                         <button type="submit">Subscribe</button>
                         <div id="subscribe-success"></div>
                     </form>
                 </div>
             </div>
+            
         </section>
         <!-- END SUBSCRIBE -->
         <!-- CONTACT -->
